--- a/web/templates/myapp/view.html
+++ b/web/templates/myapp/view.html
@@ -22,16 +22,6 @@
             </tr>
             {% endfor %}
     </table>
-    <div class="col-md-8 col-md-offset-2 text-center gtco-section">
-        <h3>Comment</h3>
-        <form method="post">
-            {% csrf_token %}
-            <div class="row">
-            {{ form.as_p }}
-            <button type="submit">Create</button>
-            </div>
-        </form>
-    </div>
-    <!--<a href="/api/objects/comment/{{apartment.id}}">Comment</a>-->
+    <a href="/comment/{{apartment.id}}">Comment</a>
 </div>
 {% endblock %}
