Changed docker-compose.yml and took out some comment portions

--- a/web/templates/myapp/view.html
+++ b/web/templates/myapp/view.html
@@ -6,6 +6,8 @@
     <p>ID: ${{apartment.id}}</p>
     <p>Price: ${{apartment.price}}</p>
     <p>Overall Rating: {{apartment.rating}}</p>
+    <a href="/">Apartment List</a>
+    <!--
     <table class="table table-striped" style="table-layout:fixed">
             <thead>
             <tr>
@@ -22,6 +24,6 @@
             </tr>
             {% endfor %}
     </table>
-    <a href="/comment/{{apartment.id}}">Comment</a>
+    <a href="/comment/{{apartment.id}}">Comment</a>-->
 </div>
 {% endblock %}
