--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -60,6 +60,7 @@
 						<li><a href="/price" data-nav-section="portfolio">Cheapest Deals</a></li>
 						<li><a href="/" data-nav-section="blog">All Apartments</a></li>
 						<li><a href="/create/" data-nav-section="contact">Submit New Apartment</a></li>
+						<li><a href="/signup/" data-nav-section="contact">Sign Up Placeholder</a></li>
 						<!--<li><a href="/api/auth/logout/" class="external">Log Out</a></li>-->
 					</ul>
 				</div>
