fixed mistakes in sign up. created user log in with authenticator

--- a/web/templates/reg_base.html
+++ b/web/templates/reg_base.html
@@ -55,8 +55,8 @@
 				</div>
 				<div class="col-xs-10 text-right menu-1 main-nav">
 					<ul>
-						<li><a href="/api/auth/login" data-nav-section="home">Log In</a></li>
-						<li><a href="/api/auth/signup/" class="external">Sign Up</a></li>
+						<li><a href="/login" data-nav-section="home">Log In</a></li>
+						<li><a href="/signup/" class="external">Sign Up</a></li>
 					</ul>
 				</div>
 			</div>
