--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -58,9 +58,9 @@
 						<li><a href="/intro" data-nav-section="home">Home</a></li>
 						<li><a href="/top" data-nav-section="services">Top Apartments</a></li>
 						<li><a href="/price" data-nav-section="portfolio">Cheapest Deals</a></li>
-						<li><a href="/" data-nav-section="blog">All Apartments</a></li>
+						<li><a href="/home" data-nav-section="blog">All Apartments</a></li>
 						<li><a href="/create/" data-nav-section="contact">Submit New Apartment</a></li>
-						<li><a href="/signup/" data-nav-section="contact">Sign Up Placeholder</a></li>
+						<li><a href="/logout/" data-nav-section="contact">Log Out</a></li>
 						<!--<li><a href="/api/auth/logout/" class="external">Log Out</a></li>-->
 					</ul>
 				</div>
