--- a/web/templates/reg_base.html
+++ b/web/templates/reg_base.html
@@ -55,7 +55,7 @@
 				</div>
 				<div class="col-xs-10 text-right menu-1 main-nav">
 					<ul>
-						<li><a href="/login" data-nav-section="home">Log In</a></li>
+						<li><a href="/" data-nav-section="home">Log In</a></li>
 						<li><a href="/signup/" class="external">Sign Up</a></li>
 					</ul>
 				</div>
