Associated apartments with user. Updated create apartment and view apartment. Handle nonexistent apartment

--- a/web/templates/myapp/view.html
+++ b/web/templates/myapp/view.html
@@ -6,6 +6,7 @@
     <p>ID: ${{apartment.id}}</p>
     <p>Price: ${{apartment.price}}</p>
     <p>Overall Rating: {{apartment.rating}}</p>
+    <p>Apartment Owner: {{apartment.username}}</p>
     <a href="/">Apartment List</a>
     <!--
     <table class="table table-striped" style="table-layout:fixed">
