minor fix. Redirect to home page when we clicke the apartment list. it was redirecting to log in page

--- a/web/templates/myapp/view.html
+++ b/web/templates/myapp/view.html
@@ -7,7 +7,7 @@
     <p>Price: ${{apartment.price}}</p>
     <p>Overall Rating: {{apartment.rating}}</p>
     <p>Apartment Owner: {{apartment.username}}</p>
-    <a href="/">Apartment List</a>
+    <a href="/home">Apartment List</a>
     <!--
     <table class="table table-striped" style="table-layout:fixed">
             <thead>
