Updated error messages in the web front-end -paired programming with chris

--- a/web/templates/registration/login.html
+++ b/web/templates/registration/login.html
@@ -6,7 +6,8 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p}}
-    <button type="submit">Log in</button> <a href="/api/auth/signup" class="btn"> Don't have an account? </a>
+    <p>{{message}}</p>
+    <button type="submit">Log in</button> <a href="/signup" class="btn"> Don't have an account? </a>
   </form>
 </div>
 {% endblock %}
