--- a/web/templates/myapp/create.html
+++ b/web/templates/myapp/create.html
@@ -6,6 +6,7 @@
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
+    <p>{{message}}</p>
     <button type="submit">Create</button>
 </form>
 </div>
