--- a/web/templates/myapp/view.html
+++ b/web/templates/myapp/view.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="col-md-8 col-md-offset-2 text-center gtco-heading">
     <h3>{{apartment.name}}</h3>
-    <p>ID: ${{apartment.id}}</p>
+    <p>ID: {{apartment.id}}</p>
     <p>Price: ${{apartment.price}}</p>
     <p>Overall Rating: {{apartment.rating}}</p>
     <p>Apartment Owner: {{apartment.username}}</p>
