Pair programmed elastic search for new user index

--- a/web/templates/myapp/search.html
+++ b/web/templates/myapp/search.html
@@ -9,39 +9,63 @@
         <button type="submit">Search</button>
     </form>
     {% if objects != None %}
-    <br>
-    <br>
+        <br>
+        <br>
 
-    <div class="col-md-8 col-md-offset-2">
-        <h3>Results List</h3>
-    </div>
-    <div>
-      <table class="table table-striped" style="table-layout:fixed">
-        <thead>
-        <tr>
-          <th>Apartment ID
-          <th>Apartment Name
-          <th>Apartment Price
-          <th>Apartment Rating
-          <th>Apartment Owner
-        </tr>
-        </thead>
-        {% for object in objects %}
-        <tbody>
-        <tr>
-          <td>{{object.id}}</td>
-          <td><a href="/details/{{object.id}}">{{object.name}}</a></td>
-          <td>{{object.price}}</td>
-          <td>{{object.rating}}/5</td>
-          <td>{{object.username}}</td>
-          <!--<td><a href="/update/{{object.id}}">Edit Apartment</a></td>
-          <td><a href="/delete/{{object.id}}">Delete Apartment</a></td>-->
-        </tr>
-        </tbody>
-        {% endfor %}
-      </table>
-      <a href="/create" class="btn">Create New Apartment</a>
-    </div>
+        <div class="col-md-8 col-md-offset-2">
+            <h3>Results List</h3>
+        </div>
+
+        {% if user %}
+        <div>
+          <table class="table table-striped" style="table-layout:fixed">
+            <thead>
+            <tr>
+              <th>Username
+              <th>Email
+            </tr>
+            </thead>
+            {% for object in objects %}
+            <tbody>
+            <tr>
+              <td>{{object.username}}</td>
+              <td>{{object.email}}</td>
+              <!--<td><a href="/update/{{object.id}}">Edit Apartment</a></td>
+              <td><a href="/delete/{{object.id}}">Delete Apartment</a></td>-->
+            </tr>
+            </tbody>
+            {% endfor %}
+          </table>
+        </div>
+        {% else %}
+        <div>
+          <table class="table table-striped" style="table-layout:fixed">
+            <thead>
+            <tr>
+              <th>Apartment ID
+              <th>Apartment Name
+              <th>Apartment Price
+              <th>Apartment Rating
+              <th>Apartment Owner
+            </tr>
+            </thead>
+            {% for object in objects %}
+            <tbody>
+            <tr>
+              <td>{{object.id}}</td>
+              <td><a href="/details/{{object.id}}">{{object.name}}</a></td>
+              <td>{{object.price}}</td>
+              <td>{{object.rating}}/5</td>
+              <td>{{object.username}}</td>
+              <!--<td><a href="/update/{{object.id}}">Edit Apartment</a></td>
+              <td><a href="/delete/{{object.id}}">Delete Apartment</a></td>-->
+            </tr>
+            </tbody>
+            {% endfor %}
+          </table>
+          <a href="/create" class="btn">Create New Apartment</a>
+        </div>
+        {% endif %}
     {% endif %}
 </div>
 {% endblock %}
