--- a/web/templates/myapp/view.html
+++ b/web/templates/myapp/view.html
@@ -6,7 +6,7 @@
     <p>ID: {{apartment.id}}</p>
     <p>Price: ${{apartment.price}}</p>
     <p>Overall Rating: {{apartment.rating}}</p>
-    <p>Apartment Owner: {{apartment.username}}</p>
+    <p>Apartment Owner: <a href="/profile/{{apartment.username}}">{{apartment.username}}</a></p>
     <a href="/home">Apartment List</a>
     <!--
     <table class="table table-striped" style="table-layout:fixed">
