Made user's personal profile page to delete and edit. Delete and edit function links are now only accessible by the owner. Apartment lists now display apartment owners and links instead of edit and delete.

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -59,8 +59,9 @@
 						<li><a href="/top" data-nav-section="services">Top Apartments</a></li>
 						<li><a href="/price" data-nav-section="portfolio">Cheapest Deals</a></li>
 						<li><a href="/home" data-nav-section="blog">All Apartments</a></li>
-						<li><a href="/create/" data-nav-section="contact">Submit New Apartment</a></li>
+						<li><a href="/create/" data-nav-section="contact">Post Apartment</a></li>
 						<li><a href="/search/" data-nav-section="contact">Search</a></li>
+						<li><a href="/user_profile/" data-nav-section="contact">My Profile</a></li>
 						<li><a href="/logout/" data-nav-section="contact">Log Out</a></li>
 						<!--<li><a href="/api/auth/logout/" class="external">Log Out</a></li>-->
 					</ul>
