--- a/web/templates/myapp/search.html
+++ b/web/templates/myapp/search.html
@@ -6,6 +6,7 @@
     <form method="post" >
         {% csrf_token %}
         {{ form.as_p }}
+        <p>{{message}}</p>
         <button type="submit">Search</button>
     </form>
     {% if objects != None %}
