pair-programming with Chris, Some Selenium-Tests are working and wishing loadbalance(haproxy) works

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -61,8 +61,8 @@
 						<li><a href="/home" data-nav-section="blog">All Apartments</a></li>
 						<li><a href="/create/" data-nav-section="contact">Post Apartment</a></li>
 						<li><a href="/search/" data-nav-section="contact">Search</a></li>
-						<li><a href="/user_profile/" data-nav-section="contact">My Profile</a></li>
-						<li><a href="/logout/" data-nav-section="contact">Log Out</a></li>
+						<li><a id="my_profile" href="/user_profile/" data-nav-section="contact">My Profile</a></li>
+						<li><a id="logout" href="/logout/" data-nav-section="contact">Log Out</a></li>
 						<!--<li><a href="/api/auth/logout/" class="external">Log Out</a></li>-->
 					</ul>
 				</div>
