--- a/web/templates/registration/signup.html
+++ b/web/templates/registration/signup.html
@@ -10,7 +10,7 @@
         {% csrf_token %}
             <p>{{message}}</p>
         {{ form.as_p }}
-        <button type="submit">Sign up</button> <a href="/home" class="btn"> Already have an account? </a>
+        <button id="signup" type="submit">Sign up</button> <a href="/home" class="btn"> Already have an account? </a>
       </form>
     </div>
 </div>
