--- a/web/templates/registration/login.html
+++ b/web/templates/registration/login.html
@@ -7,7 +7,7 @@
         {% csrf_token %}
         {{ form.as_p}}
     <p>{{message}}</p>
-    <button type="submit">Log in</button> <a href="/signup" class="btn"> Don't have an account? </a>
+    <button id="login" type="submit">Log in</button> <a href="/signup" class="btn"> Don't have an account? </a>
   </form>
 </div>
 {% endblock %}
