Paired-programing between Chris + Taehyun, Finished adding all selenium tests for user stories.

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>CS4501 Project</title>
+	<title>Welcome to ApartFinder</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
   	<!-- Facebook and Twitter integration -->
@@ -56,12 +56,12 @@
 				<div class="col-xs-10 text-right menu-1 main-nav">
 					<ul>
 						<li><a href="/intro" data-nav-section="home">Home</a></li>
-						<li><a href="/top" data-nav-section="services">Top Apartments</a></li>
-						<li><a href="/price" data-nav-section="portfolio">Cheapest Deals</a></li>
-						<li><a href="/home" data-nav-section="blog">All Apartments</a></li>
-						<li><a href="/create/" data-nav-section="contact">Post Apartment</a></li>
-						<li><a href="/search/" data-nav-section="contact">Search</a></li>
-						<li><a id="my_profile" href="/user_profile/" data-nav-section="contact">My Profile</a></li>
+						<li><a id="top" href="/top" data-nav-section="services">Top Apartments</a></li>
+						<li><a id="price" href="/price" data-nav-section="portfolio">Cheapest Deals</a></li>
+						<li><a id="all" href="/home" data-nav-section="blog">All Apartments</a></li>
+						<li><a id="create" href="/create/" data-nav-section="contact">Post Apartment</a></li>
+						<li><a id="search" href="/search/" data-nav-section="contact">Search</a></li>
+						<li><a id="profile" href="/user_profile/" data-nav-section="contact">My Profile</a></li>
 						<li><a id="logout" href="/logout/" data-nav-section="contact">Log Out</a></li>
 						<!--<li><a href="/api/auth/logout/" class="external">Log Out</a></li>-->
 					</ul>
