--- a/web/templates/myapp/create.html
+++ b/web/templates/myapp/create.html
@@ -7,7 +7,7 @@
     {% csrf_token %}
     {{ form.as_p }}
     <p>{{message}}</p>
-    <button type="submit">Create</button>
+    <button id="createbutton" type="submit">Create</button>
 </form>
 </div>
 {% endblock %}
